Fix Sonar Bad Smells